# trendlab

./: .cush-secrets  .dockerignore  .env.example  .envrc  .gitignore  =4.9.0  CLAUDE.md  Dockerfile  FEATURES.md  README.md  deploy.sh  docker-compose.yml  plan.md  pyproject.toml  todo.md
.claude/: settings.json  settings.local.json
.claude/commands/: down.md  plan.md  todo.md  up.md  work.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging_config.py  main.py  plugins.py
app/ai/: __init__.py  client.py  event_context.py  prompts.py  query_parser.py  summarizer.py
app/analysis/: __init__.py  (+9 more)
deploy/: README.md
docs/: analysis-guide.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
plugins/: README.md
tests/: __init__.py  conftest.py  helpers.py  test_aggregation.py  test_analysis_models.py  test_anomalies.py  test_api_analyze.py  test_api_cohort.py  test_api_compare.py  test_api_correlate.py  test_api_forecast.py  test_api_insight.py  test_api_natural_query.py  test_api_series.py  test_api_versioning.py  test_asa_adapter.py  test_baseline.py  test_cache.py  test_causal_impact.py  test_coingecko_adapter.py  test_config.py  test_correlation.py  test_custom_resample.py  test_engine.py  test_error_handling.py  test_evaluation.py  test_event_context.py  test_football_adapter.py  test_forecast_engine.py  test_github_adapter.py  test_google_trends_adapter.py  test_llm_client.py  test_main.py  test_models.py  test_nl_alerts.py  test_nl_examples.py  test_notifications.py  test_persistence.py  test_plugins.py  test_prompts.py  (+16 more)
(+72 files in other folders)
